Added rollable buttons for fast and slow progression magical damage on the actor sheet.

--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -3211,18 +3211,22 @@
 							<table>
 								<tr>
 									<td>
-										Slow-Progression Magical Damage (Thrust)
+										Slow-Progression Magical Damage (Thrust):
 									</td>
-									<td>
+									<td style="font-weight: bold">
 										{{actor.system.magic.thr}}
+										<label class="fa fa-dice-six rollable" data-level="{{actor.system.magic.thr}}"
+											   data-label="Makes a &lt;b&gt;Slow-Progression Magical Damage&lt;/b&gt; roll." data-type="damage"></label>
 									</td>
 								</tr>
 								<tr>
 									<td>
-										Fast-Progression Magical Damage (Swing)
+										Fast-Progression Magical Damage (Swing):
 									</td>
-									<td>
+									<td style="font-weight: bold">
 										{{actor.system.magic.sw}}
+										<label class="fa fa-dice-six rollable" data-level="{{actor.system.magic.sw}}"
+											   data-label="Makes a &lt;b&gt;Fast-Progression Magical Damage&lt;/b&gt; roll." data-type="damage"></label>
 									</td>
 								</tr>
 								<tr>
