--- a/gurps4e.css
+++ b/gurps4e.css
@@ -28,15 +28,9 @@
 	grid-template-rows: 120px 0fr 0fr 0fr;
 }
 
-#personal {
-	grid-area: personal;
+.actor-sheet-header {
 	display: grid;
-	grid-template:
-		"portrait actorname reserves pointTotals"
-		"portrait racegender reserves pointTotals";
-	grid-template-columns: 100px 2fr 1fr auto;
-	grid-template-rows: 55px 60px;
-	grid-gap: 5px;
+	grid-template-columns: auto auto 152px 102px;
 }
 
 .item-row {
@@ -152,27 +146,15 @@
 	grid-template-columns: 8fr 6fr 2fr;
 }
 
-#portrait {
-	grid-area: portrait;
-	display: grid;
-	align-self: center;
-}
-
 .portrait {
-	min-width: 100px;
-	min-height: 100px;
+	max-height: 127px;
 }
 
-#actorname {
-	grid-area: actorname;
-	display: grid;
-	height: 55px;
-	font-size: 150%;
-	font-weight: bold;
+.actorname {
+	height: 55px !important;
+	font-size: xx-large !important;
+	font-weight: 400;
 	align-items: center;
-}
-
-.charname {
 	align-self: center;
 	min-height: 50px;
 }
@@ -185,17 +167,11 @@
 	margin: unset;
 }
 
-#racegender {
-	grid-area: racegender;
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
+.racegender {
+	display: flex;
 	align-items: center;
-}
-
-#pointTotals {
-	grid-area: pointTotals;
-	display: grid;
-	grid-template-rows: repeat(2, 1fr);
+	flex-wrap: wrap;
+	justify-content: space-between;
 }
 
 #secondaryAttributes {
@@ -418,16 +394,23 @@
 	grid-template-columns: repeat(4,auto);
 }
 
-.reserves-block {
+.pointTotals {
+	display: grid;
+	grid-template-columns: 9ch 6ch;
+}
 
+.pointName {
+	font-weight: bold;
+	width: 9ch;
 }
 
 .pointTotal {
-
+	text-align: right !important;
+	width: 6ch !important;
 }
 
 .unspentEntry {
-	width: 5ch !important;
+
 }
 
 .atrVal {
@@ -484,18 +467,40 @@
 
 .reserves {
 	display: grid;
-	grid-template-columns: auto 2fr 2fr 2fr 2fr;
-	padding: 2px;
+	grid-template-columns: 2.5em 2.5em 2.5em 2.5em 2.5em;
 	border: 1px dotted grey;
-	margin: 1px;
+}
+
+.reserves-block {
+
 }
 
 .reserves-header {
-	display: grid;
-	grid-template-columns: 1fr 1fr 1fr 1fr;
-	padding: 2px;
-	border: 1px dotted grey;
-	margin: 1px;
+
+}
+
+.erRow {
+	background: #007cff8a !important;
+	font-weight: bold;
+	color: black !important;
+}
+
+.fpRow {
+	background: #00ff008a !important;
+	font-weight: bold;
+	color: black !important;
+}
+
+.hpRow {
+	background: #ff00008a !important;
+	font-weight: bold;
+	color: black !important;
+}
+
+.erRowLabel,
+.fpRowLabel,
+.hpRowLabel {
+	font-weight: bold;
 }
 
 .reserves-header .title {
@@ -573,6 +578,11 @@
 	width: 15px;
 	font-size: 150%;
 	text-align: center;
+}
+
+.actor-sheet {
+	display: grid;
+	grid-template-rows: 0fr 0fr 0fr 0fr;
 }
 
 .sheet input {
