--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -559,7 +559,7 @@
 							{{#if (eq type "Trait") }}
 								{{#if (eq item.system.subCategory category)}}
 									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
-										<td class="item-image" style="width: 24px; padding: 0 2px">
+										<td class="item-image" style="width: 24px; padding: 0 !important; margin: 0 !important;">
 											<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 										</td>
 										<td class="item-name">
@@ -618,7 +618,7 @@
 							{{#if (eq type "Rollable")}}
 								{{#if (eq item.system.subCategory category)}}
 									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
-										<td class="item-image" style="width: 24px; padding: 0 2px">
+										<td class="item-image" style="width: 24px; padding: 0 !important; margin: 0 !important;">
 											<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 										</td>
 										<td class="item-name">
@@ -949,7 +949,7 @@
 							{{#if (or (eq type "Equipment") (eq type "Custom Weapon") (eq type "Custom Armour") (eq type "Travel Fare") (eq type "Custom Jewelry")) }}
 								{{#if (eq item.system.subCategory category)}}
 									<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
-										<td class="item-image" style="width: 24px; padding: 0 2px">
+										<td class="item-image" style="width: 24px; padding: 0 !important; margin: 0 !important;">
 											<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 										</td>
 										<td class="item-name"><span>{{item.name}}</span></td>
@@ -3229,7 +3229,7 @@
 									{{#if (eq type "Spell")}}
 										{{#if (eq item.system.subCategory category)}}
 											<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
-												<td class="item-image" style="width: 24px; padding: 0 2px">
+												<td class="item-image" style="width: 24px; padding: 0 !important; margin: 0 !important;">
 													<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 												</td>
 												<td class="item-name" style="width: 9em;">
@@ -3567,7 +3567,7 @@
 						{{#each items as |item id|}}
 						{{#if (and (eq type "Ritual") (eq system.ritualType "standard")) }}
 						<tr class="item accordion-open" data-item-id="{{item._id}}">
-							<td class="item-image" style="width: 24px; padding: 0 2px">
+							<td class="item-image" style="width: 24px; padding: 0 !important; margin: 0 !important;">
 								<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 							</td>
 							<td class="item-name" style="width: 9em;">
@@ -3626,7 +3626,7 @@
 						{{#each items as |item id|}}
 						{{#if (and (eq type "Ritual") (eq system.ritualType "conditional")) }}
 						<tr class="item accordion-open" data-item-id="{{item._id}}">
-							<td class="item-image" style="width: 24px; padding: 0 2px">
+							<td class="item-image" style="width: 24px; padding: 0 !important; margin: 0 !important;">
 								<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 							</td>
 							<td class="item-name" style="width: 9em;">
@@ -3688,7 +3688,7 @@
 						{{#each items as |item id|}}
 						{{#if (and (eq type "Ritual") (or (eq system.ritualType "charm") (eq system.ritualType "conditionalCharm"))) }}
 						<tr class="item accordion-open" data-item-id="{{item._id}}">
-							<td class="item-image" style="width: 24px; padding: 0 2px">
+							<td class="item-image" style="width: 24px; padding: 0 !important; margin: 0 !important;">
 								<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 							</td>
 							<td class="item-name" style="width: 9em;">
@@ -3762,7 +3762,7 @@
 						{{#each items as |item id|}}
 						{{#if (and (eq type "Ritual") (eq system.ritualType "elixir")) }}
 						<tr class="item accordion-open" data-item-id="{{item._id}}">
-							<td class="item-image" style="width: 24px; padding: 0 2px">
+							<td class="item-image" style="width: 24px; padding: 0 !important; margin: 0 !important;">
 								<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
 							</td>
 							<td class="item-name" style="width: 9em;">
